css/kasper.css
/* ... */
@media (max-width:1140px){
    .about-us .statistics .content{
        width: 100%;
    }
}
@media (max-width:767px){
    .about-us .statistics .content{
        flex-wrap: wrap;
    }
}
.about-us .statistics .content .srv i{
    padding:20px 30px 20px 30px;
    background-color: #1c1e1f;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    margin: auto;
}.about-us .statistics .content .srv{
    width: 150px;
    text-align: center;
}
.about-us .statistics .content .srv p{
    margin-bottom: 25px;
}
.about-us .statistics .content .srv p:first-of-type{
    margin-top: 20px;
    font-size: 50px;
    font-weight: 700;
}
/* end about us */
/* start  testimonials & our skills */
.skills{
    padding-top: 60px;
    padding-bottom: 60px;
    display: grid;
    width: 100%;
    height: 100%;
    grid-template-columns: repeat(2 , minmax(300px , 1fr));
}
@media (max-width:1070px){
    .skills{
        grid-template-columns: 1fr;
    }
}
.skills .main-heading h2::before,
.skills .main-heading h2::after{
    display: none;
}
.skills .testimonals{
    position: relative;    
}
@media (max-width:1070px){
    .skills .testimonals{
        margin-bottom: 100px;
    }
}
.skills .testimonals .srv{
    position: relative;
    top: 60px;
    left: 140px;
}
@media (max-width:1070px){
    .skills .testimonals .srv{
        position: relative;
        left: 0px;
    }
}
.skills .testimonals .srv p:first-of-type{
    width: 400px;
    margin:60px auto;
    border-bottom: 1px solid black;
    padding-bottom: 60px;
    position: relative;
}
.skills .testimonals .srv p:last-of-type{
    position: absolute;
    bottom: 20px;
    right: 30%;
    color: #c2c2c2;
}
@media (max-width:1070px){
    .skills .testimonals .srv p:first-of-type{
        width: 300px;
        border: none;
        
    }
    .skills .testimonals .srv p:last-of-type{
        right: 47%;
    }
}
@media (max-width:767px){
    .skills .testimonals .srv p:last-of-type{
        right: 42%;
    }
}
.skills .testimonals .srv .image{
    position: absolute;
    left: 100px;
    top: -20px;
}
@media (max-width:1665px){
    .skills .testimonals .srv .image{
        left: 60px;
    }
}
@media (max-width:1515px){
    .skills .testimonals .srv .image{
        left: -20px;
    }
}
@media (max-width:1235px){
    .skills .testimonals .srv .image{
        left: -70px;
    }
}
@media (max-width: 1070px){
    .skills .testimonals .srv .image{
        position: relative;
        left: 43%;
    }   
}
@media (max-width: 767px){
    .skills .testimonals .srv .image{
        position: relative;
        left: 33%;
    }   
}
.skills .testimonals .srv .image img{
    width: 110px;
    height: 110px;
    object-fit: cover;
    border-radius: 50%;
}
.skills .testimonals .bullets{
    position: absolute;
    left: 60%;
    transform: translateY(-50%);
    bottom: -30px;
    display: flex;
}
@media (max-width:1070px){
    .skills .testimonals .bullets{
        left: 46%;
    }
}
.skills .testimonals .bullets li{
    width: 10px;
    height: 10px;
    border: 1px solid black;
    border-radius: 50%;
    margin-right: 5px;
}
.skills .testimonals .bullets li.active{
    background-color: var(--main-color);
    border-color: var(--main-color);
}
.jobs{
    margin: auto;
    width: 100%;
    height: 100%;
}
.jobs .job{
    width: 80%;
    padding-top: 40px;
    margin: auto;
}
.jobs .job .skill{
    margin-top: 30px;
}
.jobs .job .skill .raing-1,
.jobs .job .skill .raing-2,
.jobs .job .skill .raing-3,
.jobs .job .skill .raing-4{
    width: 100%;
    height: 40px;
    background-color: #ccc;
}
.jobs .job .skill p{
    margin-bottom: 10px;
}
.jobs .job .skill .raing-1 div{
    width: 95%;
    height: 100%;
    background-color: var(--main-color);
    position: relative;
}
.jobs .job .skill .raing-1 div::after{
    content: "95%";
    position: absolute;
    padding: 4px;
    background-color: black;
    color: white;
    left: 97.1%;
    top: -42px;
}
.jobs .job .skill .raing-1 div::before{
    content: "";
    position: absolute;
    border: 10px solid transparent;
    border-top-color: black;
    left: 98.5%;
    top: -15px;
}
.jobs .job .skill .raing-2 div{
    width: 93%;
    height: 100%;
    background-color: var(--main-color);
    position: relative;
}
.jobs .job .skill .raing-2 div::after{
    content: "93%";
    position: absolute;
    padding: 4px;
    background-color: black;
    color: white;
    left: 97.1%;
    top: -41px;
}
.jobs .job .skill .raing-2 div::before{
    content: "";
    position: absolute;
    border: 10px solid transparent;
    border-top-color: black;
    left: 98.5%;
    top: -15px;
}
.jobs .job .skill .raing-3 div{
    width: 85%;
    height: 100%;
    background-color: var(--main-color);
    position: relative;
}
.jobs .job .skill .raing-3 div::after{
    content: "85%";
    position: absolute;
    padding: 4px;
    background-color: black;
    color: white;
    left: 97%;
    top: -41px;
}
.jobs .job .skill .raing-3 div::before{
    content: "";
    position: absolute;
    border: 10px solid transparent;
    border-top-color: black;
    left: 98.3%;
    top: -15px;
}
.jobs .job .skill .raing-4 div{
    width: 87%;
    height: 100%;
    background-color: var(--main-color);
    position: relative;
}
.jobs .job .skill .raing-4 div::after{
    content: "87%";
    position: absolute;
    padding: 4px;
    background-color: black;
    color: white;
    left: 97%;
    top: -41px;
}
.jobs .job .skill .raing-4 div::before{
    content: "";
    position: absolute;
    border: 10px solid transparent;
    border-top-color: black;
    left: 98.3%;
    top: -15px;
}
/* end  testimonials & our skills */
/* start before pricing */
.before-pricing{
    height: 50vh;
    background-image: url(../images/before-pricing.jpg);
    background-size: cover;
    position: relative;
    display: flex;
    justify-content: center;
}
/* ... */

